refactor(arch): grande refatoração sistêmica para arquitetura Facade e Humble Object
- Implementação de 17 Facades para isolamento total entre a camada de UI e o Domínio.
- Refatoração integral de todos os Controllers para o padrão Humble Object (foco exclusivo em UI).
- Padronização de Injeção de Dependência via Construtor em todos os componentes gerenciados pelo Spring.
- Implementação do Padrão Ouro de Logs: tags [TELEMETRIA], [AUDITORIA], [NEGOCIO] e [SISTEMA] em todo o fluxo.
- Garantia de Thread Safety: processamento pesado e I/O movidos para Virtual Threads via AsyncUtils.
- Correção de UX: redimensionamento dinâmico de overlays, scroll automático em tabelas e preenchimento inteligente de campos.
- Sincronização de contratos FXML com os novos handlers em português.

Princípios: SOLID (SRP, DIP), Clean Code, SoC e Observabilidade.